--- a/package.json
+++ b/package.json
@@ -1,21 +1,25 @@
 {
-  "name": "menu",
+  "name": "hookahmenu",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
+    "@emotion/react": "^11.11.0",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.11.16",
+    "@mui/material": "^5.13.0",
+    "@react-three/drei": "^9.66.6",
+    "@react-three/fiber": "^8.0.11",
+    "@react-three/postprocessing": "^2.3.2",
+    "hamburger-react": "^2.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-parallax": "^3.5.1",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "three": "0.139.2"
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "build": "react-scripts build"
   },
   "eslintConfig": {
     "extends": [
